fix: bug with covering context

--- a/src/styles/desktop.scss
+++ b/src/styles/desktop.scss
@@ -64,7 +64,7 @@
   }
 
   &-list {
-    z-index: 2;
+    z-index: 5;
     position: absolute;
     right: 0;
     top: 0;
