--- a/src/styles/mobile.scss
+++ b/src/styles/mobile.scss
@@ -14,12 +14,15 @@
 
 @media only screen and (max-width: 540px) {
   .header {
+    z-index: 2;
     position: sticky;
     top: 0;
-    padding: 15px 0;
 
+    padding: 15px 0;
     margin: 0;
+
     border-bottom: #d5d8da solid 1px;
+    background-color: #fff;
   }
 
   .wrapper {
